# MeowNet

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml
development/: engineering-playbook.md
docs/architecture/: agent-federated-gateway.md  agent-proactive-ai.md  agent-service-gateway.md  agent.md  architectural-principles.md  glossary.md  node.md  roles.md
docs/development/: engineering-playbook.md  test-driven-decomposition.md
docs/philosophy/: code-of-conduct.md  manifesto.md  principles.md
src/meownet/: __init__.py
src/scripts/: context_builder.py
tests/spec/: context_builder_spec.py  test_context_builder_impl.py
