[project]
name = "meownet"
version = "0.1.0"
description = "A federated network for lazy mutual aid where humans and AI collaborate organically. No central control, no forced help - just natural cooperation between different forms of consciousness."
readme = "README.md"
authors = [
    { name = "Maslennikov E. A.", email = "maslennikovea1987@yandex.ru" }
]
requires-python = ">=3.10"
dependencies = [
    "mypy>=1.19.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]

[project.scripts]
meownet = "meownet:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
